syntax = "proto3";

 package authors;

 service AuthorsController {
   rpc FindAll (Empty) returns (AllAuthorsResponse) {}
   rpc FindOne (AuthorById) returns (Author) {}
   rpc Create (CreateAuthorDTO) returns (Author) {}
   rpc Update (UpdateAuthorDTO) returns (Author) {}
   rpc Delete (AuthorById) returns (Empty) {}
 }

 message AuthorById {
   int32 id = 1;
 }

 message Author {
   int32 id = 1;
   string firstName = 2;
   string lastName = 3;
   int32 age = 4;
   string biography = 5;
   int32 numberOfBooks = 6;
 }

message AllAuthorsResponse {
  repeated Author authors = 1;
}

message CreateAuthorDTO {
   string firstName = 1;
   string lastName = 2;
   int32 age = 3;
   string biography = 4;
   int32 numberOfBooks = 5;
}
message UpdateAuthorDTO {
   int32 id = 1;
   optional string firstName = 2;
   optional string lastName = 3;
   optional int32 age = 4;
   optional string biography = 5;
   optional int32 numberOfBooks = 6;
}
message Empty {}
